# AgentForgeProject

./: .agentforge.env  .envrc  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  set-env.ps1
.agentforge/: .gitignore  config.toml  mcp.toml  policy.toml  workflows.toml
.agentforge/prompts/: issue_implement.md
.github/workflows/: ci.yml
agentforge/: cli.py
agentforge/core/: bootstrap.py  config.py  daemon.py  diffscan.py  github.py  guardrails.py  harness.py  init.py  lock_maintenance.py  locks.py  mcp.py  policy.py  pr.py  preflight.py  queue.py  runner.py  runs.py  server.py  state.py  utils.py  webhook.py  workflow.py  workspace.py
agentforge/providers/: __init__.py  base.py  codex_cli.py  mock.py  shell.py
agentforge/templates/: AGENTFORGE_RULES.md  __init__.py  agentforge-wake.yml  config.toml  locks.toml  mcp.toml  policy.toml  workflows.toml
docs/: 01-overview.md  02-installation.md  03-quickstart.md  04-configuration.md  05-security.md  06-github-integration.md  07-providers.md  08-harness.md  09-roadmap.md  10-bootstrap.md  10-porting-notes.md  11-ci-and-quality.md  11-testing-guide.md  12-plugins.md  12-todos-placeholders.md  13-hardening-playbook.md  14-internals.md  15-container-sandbox.md  16-workflows-and-locks.md  17-ui-and-mcp.md  18-architecture-and-review-loop.md  19-manual-qa-failure-analysis.md  diagrams.md
examples/generic-node/.agentforge/: config.toml
examples/github/workflows/: agentforge-selfhosted.yml  agentforge-webhook-selfhosted.yml
examples/taskdeck/.agentforge/: config.toml  policy.toml
scripts/: af.ps1  af.sh  bootstrap.sh  install.ps1  install.sh
templates/systemd/: agentforge-daemon.service
tests/: test_autolock.py  test_config.py  test_config_paths.py  test_daemon_parsing.py  test_diffscan.py  test_globs.py  test_lock_sticky.py  test_mcp_config.py  test_provider_codex_cli.py  test_providers.py  test_sanitize.py  test_shell_cmd.py  test_state.py  test_surgical_mode.py  test_ui_html.py  test_utils_shell.py
