[project]
name = "agentforge"
version = "0.2.0"
description = "A self-contained, local-first agent orchestrator built around git worktrees."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name="AgentForge contributors"}]
keywords = ["agents", "git", "worktree", "automation", "orchestration", "devtools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.optional-dependencies]
# Development and CI dependencies
# Install with: pip install -e .[dev]
dev = [
  "pytest>=8.0",
]

[project.scripts]
agentforge = "agentforge.cli:main"
af = "agentforge.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentforge*"]

[tool.setuptools.package-data]
"agentforge.templates" = ["*.toml", "*.md", "*.yml"]


[project.entry-points."agentforge.providers"]
# External provider plugins can register here.
# Example:
# claude = "agentforge_claude:provider"
